// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caret renders with direction down 1`] = `
<svg
  height="25"
  width="25"
>
  <path
    d="M0 25 L12 12 L24 25"
  />
</svg>
`;

exports[`Caret renders with direction left 1`] = `
<svg
  height="25"
  width="25"
>
  <path
    d="M-1 0 L12 12 L-1 24"
  />
</svg>
`;

exports[`Caret renders with direction right 1`] = `
<svg
  height="25"
  width="25"
>
  <path
    d="M25 0 L12 12 L25 24"
  />
</svg>
`;

exports[`Caret renders with direction up 1`] = `
<svg
  height="25"
  width="25"
>
  <path
    d="M0 -1 L12 12 L24 -1"
  />
</svg>
`;
